--- a/eCommerce.DAL/eCommerce.DAL.csproj
+++ b/eCommerce.DAL/eCommerce.DAL.csproj
@@ -51,6 +51,11 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Data\DataContext.cs" />
+    <Compile Include="Migrations\201612120944340_Initial.cs" />
+    <Compile Include="Migrations\201612120944340_Initial.Designer.cs">
+      <DependentUpon>201612120944340_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
@@ -60,7 +65,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612120944340_Initial.resx">
+      <DependentUpon>201612120944340_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\eCommerce.Contracts\eCommerce.Contracts.csproj">
       <Project>{15275e51-19eb-4cd6-8391-e17138912edd}</Project>
