--- a/eCommerce.DAL/eCommerce.DAL.csproj
+++ b/eCommerce.DAL/eCommerce.DAL.csproj
@@ -55,6 +55,14 @@
     <Compile Include="Migrations\201612120944340_Initial.Designer.cs">
       <DependentUpon>201612120944340_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612121928416_Initial1.cs" />
+    <Compile Include="Migrations\201612121928416_Initial1.Designer.cs">
+      <DependentUpon>201612121928416_Initial1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121930252_Initial2.cs" />
+    <Compile Include="Migrations\201612121930252_Initial2.Designer.cs">
+      <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
@@ -68,6 +76,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612120944340_Initial.resx">
       <DependentUpon>201612120944340_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121928416_Initial1.resx">
+      <DependentUpon>201612121928416_Initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121930252_Initial2.resx">
+      <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
