--- a/eCommerce.DAL/eCommerce.DAL.csproj
+++ b/eCommerce.DAL/eCommerce.DAL.csproj
@@ -55,6 +55,14 @@
     <Compile Include="Migrations\201612121930252_Initial2.Designer.cs">
       <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612130526265_AddCostPrice.cs" />
+    <Compile Include="Migrations\201612130526265_AddCostPrice.Designer.cs">
+      <DependentUpon>201612130526265_AddCostPrice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612130533089_AddCostPrice1.cs" />
+    <Compile Include="Migrations\201612130533089_AddCostPrice1.Designer.cs">
+      <DependentUpon>201612130533089_AddCostPrice1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
@@ -68,6 +76,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612121930252_Initial2.resx">
       <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612130526265_AddCostPrice.resx">
+      <DependentUpon>201612130526265_AddCostPrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612130533089_AddCostPrice1.resx">
+      <DependentUpon>201612130533089_AddCostPrice1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
