Re-did Migration to recreate all tables
Re-did Migration to recreate all tables

--- a/eCommerce.WebUI/Views/Web.config
+++ b/eCommerce.WebUI/Views/Web.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=E5440-BQRKL32;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=ecommerce;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
