--- a/eCommerce.DAL/eCommerce.DAL.csproj
+++ b/eCommerce.DAL/eCommerce.DAL.csproj
@@ -49,19 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Data\DataContext.cs" />
-    <Compile Include="Migrations\201612121930252_Initial2.cs" />
-    <Compile Include="Migrations\201612121930252_Initial2.Designer.cs">
-      <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612130526265_AddCostPrice.cs" />
-    <Compile Include="Migrations\201612130526265_AddCostPrice.Designer.cs">
-      <DependentUpon>201612130526265_AddCostPrice.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612130533089_AddCostPrice1.cs" />
-    <Compile Include="Migrations\201612130533089_AddCostPrice1.Designer.cs">
-      <DependentUpon>201612130533089_AddCostPrice1.cs</DependentUpon>
+    <Compile Include="Migrations\201612142230062_Initial.cs" />
+    <Compile Include="Migrations\201612142230062_Initial.Designer.cs">
+      <DependentUpon>201612142230062_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -75,17 +66,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612121930252_Initial2.resx">
-      <DependentUpon>201612121930252_Initial2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612130526265_AddCostPrice.resx">
-      <DependentUpon>201612130526265_AddCostPrice.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612130533089_AddCostPrice1.resx">
-      <DependentUpon>201612130533089_AddCostPrice1.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\eCommerce.Contracts\eCommerce.Contracts.csproj">
       <Project>{15275e51-19eb-4cd6-8391-e17138912edd}</Project>
       <Name>eCommerce.Contracts</Name>
@@ -94,6 +74,11 @@
       <Project>{9e4832b3-ce86-4b72-be24-97eacfca83d2}</Project>
       <Name>eCommerce.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612142230062_Initial.resx">
+      <DependentUpon>201612142230062_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
