--- a/eCommerce.DAL/eCommerce.DAL.csproj
+++ b/eCommerce.DAL/eCommerce.DAL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Repositories\VoucherRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
