Module Injection - Basic Voucher System part 2
Module Injection - Basic Voucher System part 2

Created  BasketVoucher class then refactored -> extracted & created an
Interface called IBsketVoucher, which i moved into it's own separate
file!

Created new project Called eCommerce.Services, where we extended our
Basket Service Module

NOTE: =>Extended schema with additional classes so updated database!

--- a/eCommerce.Model/eCommerce.Model.csproj
+++ b/eCommerce.Model/eCommerce.Model.csproj
@@ -51,9 +51,8 @@
   <ItemGroup>
     <Compile Include="Basket.cs" />
     <Compile Include="BasketItem.cs" />
+    <Compile Include="BasketVoucher.cs" />
     <Compile Include="Customer.cs" />
-    <Compile Include="IVoucher.cs" />
-    <Compile Include="IVoucherType.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Orderitem.cs" />
     <Compile Include="Product.cs" />
@@ -64,6 +63,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\eCommerce.Contracts\eCommerce.Contracts.csproj">
+      <Project>{15275e51-19eb-4cd6-8391-e17138912edd}</Project>
+      <Name>eCommerce.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
