--- a/eCommerce.Services/eCommerce.Services.csproj
+++ b/eCommerce.Services/eCommerce.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{15275E51-19EB-4CD6-8391-E17138912EDD}</ProjectGuid>
+    <ProjectGuid>{394AE0D4-3876-4B8B-B521-AAC547A6591A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eCommerce.Contracts</RootNamespace>
-    <AssemblyName>eCommerce.Contracts</AssemblyName>
+    <RootNamespace>eCommerce.Services</RootNamespace>
+    <AssemblyName>eCommerce.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,12 +40,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\IRepositoryBase.cs" />
-    <Compile Include="Repositories\IVoucher.cs" />
-    <Compile Include="Repositories\IVoucherType.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\eCommerce.Contracts\eCommerce.Contracts.csproj">
+      <Project>{15275e51-19eb-4cd6-8391-e17138912edd}</Project>
+      <Name>eCommerce.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\eCommerce.DAL\eCommerce.DAL.csproj">
+      <Project>{05905c0b-8584-4e4a-bd15-ecdb8fbfc668}</Project>
+      <Name>eCommerce.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\eCommerce.Model\eCommerce.Model.csproj">
+      <Project>{9e4832b3-ce86-4b72-be24-97eacfca83d2}</Project>
+      <Name>eCommerce.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\eCommerce.WebUI\eCommerce.WebUI.csproj">
+      <Project>{86583d24-33f6-40a8-bd54-053bbdf792fc}</Project>
+      <Name>eCommerce.WebUI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
